WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255825
[GStreamer][Debug] Crash in GStreamerElementHarness graph dump
https://bugs.webkit.org/show_bug.cgi?id=255825
Summary
[GStreamer][Debug] Crash in GStreamerElementHarness graph dump
Philippe Normand
Reported
2023-04-22 08:39:30 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-04-22 08:42:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13067
EWS
Comment 2
2023-04-24 03:27:18 PDT
Committed
263304@main
(9ac2e1d9cb30): <
https://commits.webkit.org/263304@main
> Reviewed commits have been landed. Closing PR #13067 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-24 03:28:21 PDT
<
rdar://problem/108445906
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug