[GStreamer][Debug] Crash in GStreamerElementHarness graph dump https://bugs.webkit.org/show_bug.cgi?id=255825

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:
(WebCore::MermaidBuilder::describeCaps): The ASCIILiteral ""_s operator expects ascii characters and
emits an ASSERT about this in Debug builds, so use a const char* instead.

Canonical link: https://commits.webkit.org/263304@main